--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=MyResume
+telegram.bot.username=batyr_CV_bot
+telegram.bot.token=7877294333:AAHpVR7bw6zfLvyxQ3lsZ2Uye7B_evBzmes
+telegram.bot.chat-id=-1002341352106
